Added AP-S paper IEEE links

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jason Merlo at 2023-09-11 13:40:03 -0400 
+%% Created for Jason Merlo at 2023-09-12 09:41:19 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -18,12 +18,13 @@
 	date-modified = {2023-09-11 13:40:03 -0400},
 	link = {https://events.gnuradio.org/event/21/contributions/413/},
 	month = {August},
+	slides = {2023_grcon_merlo.pdf},
 	title = {High Accuracy Wireless Timing Synchronization Using Software Defined Radios},
 	url = {https://events.gnuradio.org/event/21/contributions/413/},
 	video = {https://youtu.be/hiLcz9FoxKw?t=18722},
 	website = {https://events.gnuradio.org/event/21/contributions/413/},
-	slides = {2023_grcon_merlo.pdf},
-	year = {2023}}
+	year = {2023},
+	bdsk-url-1 = {https://events.gnuradio.org/event/21/contributions/413/}}
 
 @inproceedings{merlo2023ursigass,
 	abbr = {URSI GASS},
@@ -57,6 +58,9 @@
 	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
 	award = {SPC Honorable Mention},
 	booktitle = {IEEE International Symposium on Antennas and Propagation and USNC-URSI Radio Science Meeting},
+	date-modified = {2023-09-12 09:41:19 -0400},
+	doi = {10.1109/USNC-URSI52151.2023.10238024},
+	ieee = {https://doi.org/10.1109/USNC-URSI52151.2023.10238024},
 	month = {July},
 	pdf = {aps23_distributed_wideband_beamforming.pdf},
 	selected = {true},
@@ -69,6 +73,9 @@
 	abstract = {Distributed antenna arrays can provide unique capabilities in applications such as distributed communication and sensing. However, in order to coordinate distributed arrays, accurate positioning information of all nodes in the array is required to ensure coherent operations at the target location. Other works have shown that two-way time transfer using spectrally sparse two-tone ranging waveforms provides high accuracy timing synchronization. In addition to time correction, these waveforms may provide inter-node ranging with high accuracy. In this paper the accuracy of ranging via two-way time transfer for a two-node time synchronization system using a two-tone waveform is evaluated. Results are compared to ranging performance using a standard linear frequency modulated waveform (LFM). Experimental results show an accuracy of 0.5 mm using a 40 MHz bandwidth two-tone waveform with a 36 dB signal-tonoise ratio (SNR), supporting a beamforming frequency of up to 40 GHz.},
 	author = {Naim {Shandi} and Jason M. {Merlo} and Jeffrey A. {Nanzer}},
 	booktitle = {IEEE International Symposium on Antennas and Propagation and USNC-URSI Radio Science Meeting},
+	date-modified = {2023-09-12 09:39:26 -0400},
+	doi = {10.1109/USNC-URSI52151.2023.10238119},
+	ieee = {https://doi.org/10.1109/USNC-URSI52151.2023.10238119},
 	month = {July},
 	title = {Sub-Millimeter Ranging Accuracy for Distributed Antenna Arrays Using Two-Way Time Transfer},
 	year = {2023}}
