Added IEEE link for URSI-GASS, corrected typo

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,6 +36,7 @@
 	pdf = {YSASummaryMerloJason.pdf},
 	selected = {true},
 	slides = {C03-4_1020_Merlo.pdf},
+	ieee = {https://doi.org/10.23919/URSIGASS57860.2023.10265506},
 	title = {Picosecond Non-Line-of-Sight Wireless Time and Frequency Synchronization for Coherent Distributed Aperture Antenna Arrays},
 	year = {2023}}
 
