--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,10 +6,21 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@ARTICLE{randall2023tap,
+  abbr={IEEE TAP},
+  bibtex_show={true},
+  abstract={We present an approach to secure wireless communication based on dynamically changing the apparent phase center of a two-element antenna array using spatial amplitude dynamics. We implement phase center dynamics by modulating the relative amplitudes of the signals fed to two antenna elements. By moving the phase center symmetrically with respect to the geometric center of the array, the far-field amplitude pattern remains mostly constant while the phase pattern changes, imparting modulation onto the transmitted or received signals that is a function of angle. The resulting directional modulation effectively scrambles the information in the radiated waveform at angles outside of the information beam, where the modulation impacts are negligible. The result is a narrow region where information is recoverable, and since the radiated power does not change, the efficiency remains high. We present the design of a 2.5 GHz two-element array with asymmetric amplitude modulation and characterize the phase center location as a function of the amplitude ratio between the elements. We demonstrate secure wireless communication experimentally in a high signal-to-noise ratio (SNR) environment, demonstrating the reduction in throughput due solely to the phase center dynamics. Finally, we analyze the information beamwidth and present a design procedure relating the amplitude ratio, SNR, element spacing, and QAM modulation format to the information beamwidth.},
+  author={Randall, Jacob R. and Merlo, Jason M. and Arisheh, Amer Abu and Nanzer, Jeffrey A.},
+  journal={IEEE Transactions on Antennas and Propagation}, 
+  title={Array Phase Center Dynamics Using Spatial Amplitude Modulation for High Efficiency Secure Wireless Communication}, 
+  year={2023},
+  ieee={https://doi.org/10.1109/TAP.2023.3323141},
+  doi={10.1109/TAP.2023.3323141}}
 
 
 @inproceedings{merlo2023grcon,
 	abbr = {GRCon},
+	bibtex_show={true},
 	abstract = {Timing synchronization plays a critical role in many high performance software defined radio applications. However, currently, to achieve the level of synchronization required to perform distributed open loop beamforming, cabled techniques such as precision PPS fanout buffers or White Rabbit must be used to align the system clocks to within a small fraction of a sample. However, we have recently presented techniques to achieve picosecond-level synchronization wirelessly for distributed phased array beamforming accomplished using the RF front-end on Ettus X300 software defined radios. This talk will address the waveform design, time delay estimation and refinement process, and software implementation strategies used to achieve this high level of performance using host-controlled processing in GNU Radio.},
 	address = {Tempe, Arizona, USA},
 	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
@@ -28,6 +39,7 @@
 
 @inproceedings{merlo2023ursigass,
 	abbr = {URSI GASS},
+	bibtex_show={true},
 	abstract = {Picosecond-level timing synchronization with wireless frequency transfer is presented in a non-line-of-sight (NLoS) environment using two software-defined radios (SDRs). Using a spectrally sparse pulsed two-tone waveform, high accuracy timing synchronization is achieved. Frequency synchronization is achieved via a continuous 10 MHz two- tone waveform transmitted between nodes which is demodulated by a self-mixing circuit to recover the 10 MHz reference signal used to discipline the local oscillator on the receiving SDR. Total time synchronization, beamforming, and phase accuracies of 8.84 ps, 23.17 ps, and 10$\,^{\circ}$, respectively, were achieved enabling modulation bandwidths of up to 4.3 Gb/s at a carrier frequency of up to 1.33 GHz.},
 	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
 	award = {Young Scientist Award},
@@ -35,6 +47,7 @@
 	month = {August},
 	pdf = {YSASummaryMerloJason.pdf},
 	selected = {true},
+	doi = {10.23919/URSIGASS57860.2023.10265506},
 	slides = {C03-4_1020_Merlo.pdf},
 	ieee = {https://doi.org/10.23919/URSIGASS57860.2023.10265506},
 	title = {Picosecond Non-Line-of-Sight Wireless Time and Frequency Synchronization for Coherent Distributed Aperture Antenna Arrays},
@@ -42,6 +55,7 @@
 
 @article{randall2023awpl,
 	abbr = {IEEE AWPL},
+	bibtex_show={true},
 	abstract = {A new method of obtaining directional modulation by implementing antenna array dynamics is proposed. An asymmetric switching feed structure is implemented in a two-element array that supports a static antenna pattern in a desired direction while adding sufficient complex modulation at other angles to mitigate the transfer of information. The dynamic antenna array feeds are calibrated to be in-phase and have a signal feed amplitude ratio of approximately 6.15$\pm$0.1 dB through the design of an asymmetrical Wilkinson divider. The antenna system comprises of a two-state switching matrix using a double pole double throw (DPDT) RF switch. Secure communication capability is demonstrated in simulation and experiment by a 2.5 GHz two-element patch array. The communication system uses a 16-QAM single-carrier signal transmitting 48 kbits in a pseudo-random bit sequence (PRBS) at a rate of 4 Mbits/s. The DPDT switch was synchronized to the transmitter symbol rate of 1 MHz. To isolate the effects of the phase dynamics, the communication system was operating at an SNR of 33 dB, thus transmitting high power to all directions. A low bit error ratio (BER) of <10^−3 is demonstrated at the desired transmission direction 13, with higher BER outside this region. A measurement of a static antenna yielded BER =0 in all directions; thus, the bit errors and narrow 13 information beamwidth were due exclusively to the antenna array dynamics. Performance metrics of this directional modulation technique are compared against previous literature for the reader. Further insights to spurious signals and mitigation are taken into consideration for the equipment and instrumentation of a narrowband signal to validate the technique as a viable ``black-box'' system implementation.},
 	author = {Randall, Jacob R. and Arisheh, Amer Abu and Merlo, Jason M. and Nanzer, Jeffrey A.},
 	doi = {10.1109/LAWP.2023.3310911},
@@ -55,6 +69,7 @@
 
 @inproceedings{merlo2023aps,
 	abbr = {IEEE AP-S/URSI},
+	bibtex_show={true},
 	abstract = {We present a two node wideband wireless distributed antenna array operating from 3.1--3.3 GHz on software-defined radios (SDRs). To synthesize the total bandwidth of 300 MHz, a 100 MHz bandwidth signal was used over multiple frequency steps, with the carrier frequency re-tuned between each pulse. The nodes were wirelessly synchronized using a high-accuracy two-way time transfer technique which was also used to determine the inter-node range for beamforming. A total beamforming bias $\pm$ standard deviation of 62.46 $\pm$ 45.74 ps and 0.27 $\pm$ 2.28$\,^{\circ}$at the target beamforming angle at a range of 35.5 m was achieved.},
 	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
 	award = {SPC Honorable Mention},
@@ -63,6 +78,7 @@
 	doi = {10.1109/USNC-URSI52151.2023.10238024},
 	ieee = {https://doi.org/10.1109/USNC-URSI52151.2023.10238024},
 	month = {July},
+ 	pages={365-366},
 	pdf = {aps23_distributed_wideband_beamforming.pdf},
 	selected = {true},
 	slides = {TU-A1.1A.9.Jason.FINAL.pdf},
@@ -71,6 +87,7 @@
 
 @inproceedings{shandi2023aps,
 	abbr = {IEEE AP-S/URSI},
+	bibtex_show={true},
 	abstract = {Distributed antenna arrays can provide unique capabilities in applications such as distributed communication and sensing. However, in order to coordinate distributed arrays, accurate positioning information of all nodes in the array is required to ensure coherent operations at the target location. Other works have shown that two-way time transfer using spectrally sparse two-tone ranging waveforms provides high accuracy timing synchronization. In addition to time correction, these waveforms may provide inter-node ranging with high accuracy. In this paper the accuracy of ranging via two-way time transfer for a two-node time synchronization system using a two-tone waveform is evaluated. Results are compared to ranging performance using a standard linear frequency modulated waveform (LFM). Experimental results show an accuracy of 0.5 mm using a 40 MHz bandwidth two-tone waveform with a 36 dB signal-tonoise ratio (SNR), supporting a beamforming frequency of up to 40 GHz.},
 	author = {Naim {Shandi} and Jason M. {Merlo} and Jeffrey A. {Nanzer}},
 	booktitle = {IEEE International Symposium on Antennas and Propagation and USNC-URSI Radio Science Meeting},
@@ -78,51 +95,64 @@
 	doi = {10.1109/USNC-URSI52151.2023.10238119},
 	ieee = {https://doi.org/10.1109/USNC-URSI52151.2023.10238119},
 	month = {July},
+	pages={517-518},
 	title = {Sub-Millimeter Ranging Accuracy for Distributed Antenna Arrays Using Two-Way Time Transfer},
 	year = {2023}}
 
 @article{schlegel2023coherent,
 	abbr = {IEEE MWTL},
+	bibtex_show={true},
+	doi = {10.1109/LMWT.2023.3283918},
 	abstract = {We present a distributed microwave radar system operating at 4.8 GHz that uses wireless frequency transfer and internode ranging. We implement wireless frequency alignment (syntonization) using a sparse two-tone signal transmitted from the primary node and a self-mixing receiver on the secondary node. The primary node acts as a distributed radar transmitter, sending a linear frequency-modulated (LFM) waveform downrange, toward the target. There is also a repeater that retransmits an LFM from the secondary node that is used to estimate the separation of the node to correct for the phase rotation of the frequency signal due to propagation. The secondary node also locks its oscillator to the primary node and captures the signal reflected from the scene. We demonstrate the ability of the fully wireless distributed radar system to perform bistatic ranging in an outdoor environment at 4.8 GHz using software-defined radios (SDRs). Measurements to a wall yielded a maximum standard deviation of 1.7 cm and a maximum bias of 14.9 cm.},
 	author = {Schlegel, Anton and Merlo, Jason M. and Nanzer, Jeffrey A.},
 	ieee = {https://doi.org/10.1109/LMWT.2023.3283918},
 	journal = {IEEE Microwave and Wireless Technology Letters},
-	pages = {1-4},
+	volume={33},
+	number={9},
+	pages={1393-1396},
 	title = {Coherent Distributed Bistatic Radar Using Wireless Frequency Syntonization and Internode Ranging},
 	year = {2023}}
 
 @inproceedings{merlo2023wirelessly,
 	abbr = {IEEE IMS},
+	bibtex_show={true},
 	abstract = {Wirelessly coordinated distributed arrays will have a significant impact in next generation communications and sensing systems in coming years. However, to achieve high modulation bandwidths and carrier frequencies, timing and frequency transfer must be synchronized to small fractions of the modulation and carrier periods respectively. In this work, we demonstrate coordination and beamforming of a wireless distributed antenna array at 1 GHz in a cluttered outdoor environment achieving a coherent gain of 95.4% and beamforming accuracy of 27.6 ps over a 41 m channel.},
 	author = {Jason M. {Merlo} and Anton {Schlegel} and Jeffrey A. {Nanzer}},
 	award = {SPC First Place},
 	booktitle = {IEEE/MTT-S International Microwave Symposium (IMS)},
+	doi = {10.1109/IMS37964.2023.10188022},
 	ieee = {https://doi.org/10.1109/IMS37964.2023.10188022},
 	month = {June},
 	pdf = {ims23_distributed_time_frequency_transfer_and_beamforming_v1.1.pdf},
 	selected = {true},
+	pages={109-112},
 	slides = {Tu2C_3_Merlo_Jason_finalslides_v2.pdf},
 	title = {High Accuracy Wireless Time-Frequency Transfer For Distributed Phased Array Beamforming},
 	year = {2023}}
 
 @article{arisheh2023tap,
 	abbr = {IEEE TAP},
+	bibtex_show={true},
 	abstract = {We introduce a new technique for secure wireless applications using a single dynamic antenna. The dynamic antenna supports a constantly and rapidly changing current distribution that generates a radiation pattern that is static in a desired direction and dynamic elsewhere. This imparts additional modulation on the signal and obscures information transmitted or received outside of the information beam, thus achieving directional modulation. Dynamic currents are supported by a single feed that is switched between separate ports on a single antenna, generating two different radiation patterns without changing the physical shape of the antenna. We introduce the theoretical concept by exploring an ideal complex dynamic radiation pattern that remains static in a narrow desired direction and is dynamic elsewhere. The impact on the transmission of information is analyzed, showing that the information beam narrows as the modulation order increases, and design constraints on the spatial width of the information beam as a function of modulation format are determined. We design and analyze a 2.3 GHz two-state dynamic dipole antenna and experimentally demonstrate secure wireless transmission. We demonstrate the ability to change the information beamwidth and steer the information beam experimentally in real time, and to maintain high throughput in the information beam while obscuring the information elsewhere. In contrast to multiport or array-based antennas, our approach introduces a novel rapidly switched single-element technique for secure wireless applications that can be used independently from the rest of the wireless system, essentially operating as a ``black box'' for an additional layer of security.},
 	author = {Arisheh, Amer Abu and Merlo, Jason M. and Nanzer, Jeffrey A.},
 	doi = {10.1109/TAP.2023.3288013},
 	ieee = {https://doi.org/10.1109/TAP.2023.3288013},
 	journal = {IEEE Transactions on Antennas and Propagation},
-	pages = {1-1},
+	volume={71},
+	number={10},
+	pages={7715-7727},
 	title = {Design of a Single-Element Dynamic Antenna for Secure Wireless Applications},
 	year = {2023},
 	bdsk-url-1 = {https://doi.org/10.1109/TAP.2023.3288013}}
 
 @inproceedings{merlo2023joint,
 	abbr = {IEEE RadarConf},
+	bibtex_show={true},
 	abstract = {In this work we demonstrate an efficient technique for the registration and compositing of multiple automotive synthetic aperture radar (SAR) images as a step towards distributed SAR imaging. Through the use of an efficient sub-pixel Fourier-based iterative correlation and refinement technique, sub-sections of the overall SAR images are aligned. Because only small sub-regions of the full SAR images are aligned at a time, this technique inherently compensates for accelerations experienced when sampling the synthetic aperture, by assuming a quasi-constant velocity over small sub-regions of the image. Because the image fusion is performed after image formation, this technique lends itself well to a distributed architecture where the image formation is performed on-vehicle and transferred to other vehicles or a centralized cloud processor where images from other vehicles can be aggregated. Finally, because the registration of sub-regions of the SAR images are performed, the registration alignment vector can be used as a odometry provider to improve vehicle odometry estimates; if a metrology grade SAR map is used as reference, a globally reference position estimate could be performed.},
 	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
 	award = {Invited},
 	booktitle = {IEEE Radar Conference (RadarConf)},
+	doi = {10.1109/RadarConf2351548.2023.10149757},
 	ieee = {https://doi.org/10.1109/RadarConf2351548.2023.10149757},
 	month = {May},
 	pdf = {radarconf_2023_multi_pass_sar_fusion.pdf},
@@ -133,51 +163,63 @@
 
 @article{bhattacharyya2023multiobjective,
 	abbr = {IEEE MWTL},
+	bibtex_show={true},
 	abstract = {We demonstrate the efficacy of distributed microwave multiobjective beamforming at ranges near field to the array using an optimization algorithm and wireless frequency alignment (syntonization). While considerable research has recently been devoted to distributed phased array coordination, the ability to steer signals to locations close to the array in open-loop (feedback-free) systems has not been demonstrated. In this work, we apply a traditional far-field beamforming algorithm to a set of distributed antennas that are wirelessly syntonized. We demonstrate multiobjective beamforming at 0.9 GHz using software-defined radios (SDRs) in a distributed array steering either two beams (focii) or one beam and one null. This work demonstrates the feasibility of a critical part of future distributed beamforming systems that, when combined with other coordination technologies, will support coherent beamforming in widely distributed wireless systems.},
 	author = {Bhattacharyya, Ahona and Merlo, Jason M. and Mghabghab, Serge R. and Schlegel, Anton and Nanzer, Jeffrey A.},
-	ieee = {https://ieeexplore.ieee.org/abstract/document/10035952},
+	doi = {10.1109/LMWT.2022.3231183},
+	ieee = {https://doi.org/10.1109/LMWT.2022.3231183},
 	journal = {IEEE Microwave and Wireless Technology Letters},
-	pages = {1-4},
+	volume={33},
+	number={6},
+	pages={775-778},
 	title = {Multiobjective Distributed Array Beamforming in the Near Field Using Wireless Syntonization},
 	year = {2023}}
 
 @article{merlo2022wireless,
 	abbr = {IEEE T-MTT},
+	bibtex_show={true},
 	abstract = {Distributed antenna arrays have been proposed for many applications ranging from space-based observatories to automated vehicles. Achieving good performance in distributed antenna systems requires stringent synchronization at the wavelength and information level to ensure that the transmitted signals arrive coherently at the target, or that scattered and received signals can be appropriately processed via distributed algorithms. In this paper we address the challenge of high precision time synchronization to align the operations of elements in a distributed antenna array and to overcome time-varying bias between platforms due to oscillator drift. We use a spectrally sparse two-tone waveform, which obtains approximately optimal time estimation accuracy, in a two-way time transfer process. We also describe a technique for determining the true time delay using the ambiguous two-tone matched filter output, and we compare the time synchronization precision of the two-tone waveform with the more common linear frequency modulation (LFM) waveform. We experimentally demonstrate wireless time synchronization using a single pulse 40MHz two-tone waveform over a 90cm 5.8GHz wireless link in a laboratory setting, obtaining a timing precision of 2.26ps.},
-	archiveprefix = {arXiv},
 	arxiv = {2206.08457},
 	author = {Jason M. {Merlo} and Serge R. {Mghabghab} and Jeffrey A. {Nanzer}},
 	date-modified = {2023-09-11 13:22:32 -0400},
-	eprint = {2206.08457},
+	doi = {10.1109/TMTT.2022.3227878},
 	ieee = {https://doi.org/10.1109/TMTT.2022.3227878},
 	journal = {IEEE Transactions on Microwave Theory and Techniques},
 	month = {December},
 	pdf = {wireless_time_frequency_synchronization_2022.pdf},
-	primaryclass = {eess.SP},
 	selected = {true},
+	volume={71},
+	number={4},
+	pages={1720-1731},
 	title = {Wireless Picosecond Time Synchronization for Distributed Antenna Arrays},
 	year = {2022}}
 
 @article{mukerjee2022microwave,
 	abbr = {IEEE JMW},
+	bibtex_show={true},
 	abstract = {A healthy urban forest is important to improve both human health and overall environmental quality. There is currently a lack in technology that has the ability to evaluate living trees in their natural environment without invasive destructive sampling. This work presents a cost-effective, real-time microwave tomography system for practical forestry applications. The scattering measurement system is designed using wide band microstrip monopole antennas (1--5 GHz) and coupled to a switching matrix and a controlling software for automated real-time data collection. A time reversal signal processing algorithm is developed for performing imaging, based on the measurements. The imaging system is initially validated by imaging simple cylindrical targets and finally utilized for imaging defects in different tree trunk samples. Preliminary experimental results demonstrate the practicality, novelty and benefits of this approach for forestry imaging applications.},
 	author = {Mukerjee, Saptarshi and Doroshewitz, John and Merlo, Jason M. and Oakley, Christopher and Udpa, Lalita and MacFarlane, David and Huff, Emily and Nanzer, Jeffrey A.},
 	doi = {10.1109/JMW.2022.3199194},
 	ieee = {https://doi.org/10.1109/JMW.2022.3199194},
 	journal = {IEEE Journal of Microwaves},
 	month = {September},
-	pages = {1-12},
+	volume={2},
+	number={4},
+	pages={614-625},
 	title = {A Microwave Tomography System Using Time-Reversal Imaging for Forestry Applications},
 	year = {2022},
 	bdsk-url-1 = {https://doi.org/10.1109/JMW.2022.3199194}}
 
 @inproceedings{merlo2022aps,
 	abbr = {IEEE AP-S/URSI},
+	bibtex_show={true},
 	abstract = {A method for high accuracy time synchronization of nodes in a distributed antenna array that achieves time alignment accuracy of less than 10 ps is demonstrated. This technique utilizes a two-step process, first performing coarse time synchronization using a conventional pulse-per-second-based time alignment to distribute a global timestamp on device startup, then performing a refinement process using a pulsed dual-tone waveform that is matched filtered and interpolated for fine delay estimation. This process is demonstrated experimentally using software-defined radio nodes separated by 1.2 m using a carrier of 5.8 GHz and a dual-tone waveform with 50 MHz bandwidth.},
 	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
 	booktitle = {IEEE International Symposium on Antennas and Propagation and USNC-URSI Radio Science Meeting},
 	ieee = {https://doi.org/10.1109/AP-S/USNC-URSI47032.2022.9887217},
+	doi = {10.1109/AP-S/USNC-URSI47032.2022.9887217},
 	month = {July},
+	pages={1966-1967},
 	pdf = {apsursi_2022_wireless_time_transfer.pdf},
 	slides = {aps_ursi_2022_time_transfer_slides.pdf},
 	title = {High Accuracy Wireless Time Synchronization for Distributed Antenna Arrays},
@@ -185,70 +227,84 @@
 
 @inproceedings{arisheh2022aps,
 	abbr = {IEEE AP-S/URSI},
+	bibtex_show={true},
 	abstract = {We present the design and measurement of a switched dipole antenna for directional modulation in a single antenna via radiation pattern dynamics. The antenna is fed by a single port, the output of which is fed to two locations on the dipole. By switching between the two states, the complex radiation pattern is quasi-static within a secure region in the mainlobe, and dynamic outside of the secure region. We show that the complex pattern dynamics outside the secure region impart additional modulation onto the radiation pattern that will distort transmitted or received data. We present the design of the dynamic pattern antenna and measured radiation patterns of the two antenna states. We numerically characterize the secure wireless capability through calculation of the bit-error-ratio on various digital modulations in communications, demonstrating the ability to maintain a small secure region.},
 	author = {Amer Abu {Arisheh} and Jason M. {Merlo} and Jeffrey A. {Nanzer}},
 	booktitle = {IEEE International Symposium on Antennas and Propagation and USNC-URSI Radio Science Meeting},
 	ieee = {https://doi.org/10.1109/AP-S/USNC-URSI47032.2022.9887173},
+	doi = {10.1109/AP-S/USNC-URSI47032.2022.9887173},
 	month = {July},
+	pages={1470-1471},
 	title = {A Dynamic Pattern Dipole Antenna for Secure Wireless Communications},
 	year = {2022}}
 
 @article{merlo2021sar,
 	abbr = {IEEE TVT},
+	bibtex_show={true},
 	abstract = {Due to the rapid increase in 76 GHz automotive spectrum use in recent years, wireless interference is becoming a legitimate area of concern. However, the recent rise in interest of automated vehicles (AVs) has also spurred new growth and adoption of low frequency vehicle-to-everything (V2X) communications in and around the 5.8 GHz unlicensed bands, opening the possibility for communications spectrum reuse in the form of joint radar-communications (JRC). In this work, we present a low frequency 5.9 GHz side-looking polarimetric synthetic aperture radar (SAR) for automotive use, utilizing a ranging waveform in a common low frequency V2X communications band. A synthetic aperture technique is employed to address the angular resolution concerns commonly associated with radars at lower frequencies. Three side-looking fully polarimetric SAR images in various urban scenes are presented and discussed to highlight the unique opportunities for landmark inference afforded through measurement of co- and cross-polarized scattering.},
-	archiveprefix = {arXiv},
 	arxiv = {2110.14114},
 	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
-	eprint = {2110.14114},
 	ieee = {https://doi.org/10.1109/TVT.2021.3138348},
+	doi = {10.1109/TVT.2021.3138348},
 	journal = {IEEE Transactions on Vehicular Technology},
 	pdf = {automotive_sar_2021.pdf},
-	primaryclass = {eess.SP},
-	selected = {true},
+	selected = {true},  
+	volume={71},
+	number={3},
+	pages={2587-2600},
 	title = {A C-Band Fully Polarimetric Automotive Synthetic Aperture Radar},
 	year = {2021}}
 
 @article{klinefelter2021point,
 	abbr = {IEEE T-MTT},
+	bibtex_show={true},
 	abstract = {In this work, we derive the exact response of an interferometric correlation radar to an arbitrary scene containing N independent point scatterers. The response of an interferometric radar to multiple targets can be complicated by the nonlinear processing, which generates intermodulation responses in addition to the desired fundamental frequency responses. An accurate signal model is critical for predicting and mitigating these intermodulation products and allows for model-based parameter estimation methods to be used to estimate target angular velocity. We derive a general response to an arbitrary number of independent targets and validate both the exact model and a simpler approximate model via simulation and experimental measurement with a 38-GHz continuous-wave interferometric radar. The experiment contains two targets traveling perpendicular to the radar's line-of-sight on linear stages at speeds of 0.36 and 0.5 m/s. We use an error metric to describe the similarity between the measured or simulated time-frequency response and the time-frequency response of a signal generated using the frequency estimates of either the exact or approximate models and show that in regimes where the small-angle approximation holds, both models provide an accurate representation of the measured or simulated interferometric response, demonstrating the feasibility of these models.},
 	author = {Klinefelter, Eric and Merlo, Jason M. and Radha, Hayder and Nanzer, Jeffrey A.},
 	doi = {10.1109/TMTT.2021.3136265},
 	ieee = {https://doi.org/10.1109/TMTT.2021.3136265},
 	journal = {IEEE Transactions on Microwave Theory and Techniques},
-	pages = {1-1},
+	volume={70},
+	number={3},
+	pages={1562-1570},
 	title = {A Point Target Model for Interferometric Radar Angular Velocity Estimation},
 	year = {2021},
 	bdsk-url-1 = {https://doi.org/10.1109/TMTT.2021.3136265}}
 
 @article{ellision2021distributed,
 	abbr = {IEEE TAP},
+	bibtex_show={true},
 	abstract = {We demonstrate a new approach to implementing directional modulation that leverages distributed array dynamics to change the antenna array pattern over time. With appreciable spacing between the elements, the spatial phase pattern varies rapidly, such that small physical motions result in large phase variations. We define an average radiation pattern that characterizes the space-time modulation of the array pattern and calculate a spatial information filter based on the additional modulation imparted on transmitted data. The concept is demonstrated experimentally using a two-element 1.5 GHz transmit array with relative motion between the elements. The array consists of two nodes, each with one dipole antennas transmitting BPSK data, and each with two log-periodic antennas used to estimate the relative separation of the nodes and correct the beamsteering phase of the transmitters. The node separation is varied dynamically over a range of $0.98\lambda$ -- $4.7\lambda$. We investigate the use of linearly- and sinusoidally-varying internode dynamics, and demonstrate a low bit-error-ratio of approximately 10-5 at the desired transmission direction, indicating high throughput, and a high error ratio of approximately 10-0.3 at angles outside of the mainbeam, indicating corrupted data, at a signal-to-noise ratio of 12 dB.},
 	author = {Ellison, Sean M. and Merlo, Jason M. and Nanzer, Jeffrey A.},
 	doi = {10.1109/TAP.2021.3137449},
 	ieee = {https://doi.org/10.1109/TAP.2021.3137449},
 	journal = {IEEE Transactions on Antennas and Propagation},
-	pages = {1-1},
+	volume={70},
+	number={4},
+	pages={2740-2749},
 	title = {Distributed Antenna Array Dynamics for Secure Wireless Communication},
 	year = {2021},
 	bdsk-url-1 = {https://doi.org/10.1109/TAP.2021.3137449}}
 
 @article{merlo2021dimensional,
 	abbr = {IEEE T-MTT},
+	bibtex_show={true},
 	abstract = {In this work, a method for directly measuring target velocity in three dimensions using a dual axis correlation interferometric radar is presented. Recent advances have shown that the measurement of a target's angular velocity is possible by correlating the signals measured at spatially diverse aperture locations. By utilizing multiple orthogonal baselines and using conventional Doppler velocity methods to obtain radial velocity, a full three-dimensional velocity vector can be obtained using only three receive antennas and a single transmitter, without the need for tracking. A 41.8 GHz dual axis interferometric radar with a 7.26λ antenna baseline is presented along with measurements of a target moving parallel to the plane of the radar array, and of a target moving with components of both radial and tangential velocity. These experiments achieved total velocity root-mean-square errors of 41.01 mm/s (10.5%) for a target moving along a plane parallel to the array, and 45.07 mm/s (13.5%) for a target moving with components of radial and tangential motion relative to the array; estimated trajectory angle RMSEs of 10.42$\,^{\circ}$ and 5.11$\,^{\circ}$ were achieved for each experiment respectively.},
-	archiveprefix = {arXiv},
 	arxiv = {2011.05512},
 	author = {Jason M. {Merlo} and Eric {Klinefelter} and Jeffrey A. {Nanzer}},
-	eprint = {2011.05512},
 	ieee = {https://doi.org/10.1109/TMTT.2021.3124251},
+	doi = {10.1109/TMTT.2021.3124251},
 	journal = {IEEE Transactions on Microwave Theory and Techniques},
 	pdf = {3d_dual_axis_interferometer.pdf},
-	primaryclass = {eess.SP},
 	selected = {true},
+	volume={70},
+	number={3},
+	pages={1674-1685},
 	title = {Three Dimensional Velocity Measurement Using a Dual Axis Millimeter-Wave Interferometric Radar},
 	year = {2021}}
 
 @article{merlo2021multiple,
 	abbr = {IEEE MWCL},
+	bibtex_show={true},
 	abstract = {We present a novel technique for directly estimating the angular velocities of multiple targets using multi-baseline millimeter-wave interferometric radar to significantly reduce nonlinear signal distortion caused when multiple targets are present. We show that through the multiplication of the normalized instantaneous frequency measurements across different baselines, nonlinear intermodulation products resulting from dual-antenna interferometric angular velocity measurements can be mitigated, producing only the terms corresponding to the angular velocity of the targets in the scene. To validate this, simulations were performed demonstrating the close agreement between the proposed method and an ideal correlation (without intermodulation distortion). Near-field errors resulting from far-field approximations are analyzed. Finally, experimental results of a three-antenna, three-baseline 38 GHz interferometric radar are presented that demonstrate the recovery of the motion of two oscillating pendulums of differing angular frequencies.},
 	author = {Merlo, Jason M. and Klinefelter, Eric and Vakalis, Stavros and Nanzer, Jeffrey A.},
 	date-added = {2021-05-14 09:05:18 -0400},
@@ -256,7 +312,9 @@
 	doi = {10.1109/LMWC.2021.3079842},
 	ieee = {https://doi.org/10.1109/LMWC.2021.3079842},
 	journal = {IEEE Microwave and Wireless Components Letters},
-	pages = {1-1},
+	volume={31},
+	number={8},
+	pages={937-940},
 	pdf = {mbv_interferometry.pdf},
 	title = {A Multiple Baseline Interferometric Radar for Multiple Target Angular Velocity Measurement},
 	year = {2021},
@@ -264,6 +322,7 @@
 
 @inproceedings{merlo2020joint,
 	abbr = {IEEE RadarConf},
+	bibtex_show={true},
 	abstract = {An architecture for a direct-downconversion complex correlation interferometric radar capable of the
     direct, joint measurement of angle and angular velocity of a point-target is presented. Due to the simplicity
     of the system, this technique can be implemented on existing radars with distributed receivers and a
@@ -276,8 +335,8 @@
 	date-added = {2020-10-13 16:22:07 -0400},
 	date-modified = {2020-11-10 21:32:57 -0500},
 	ieee = {https://doi.org/10.1109/RadarConf2043947.2020.9266419},
+	doi = {10.1109/RadarConf2043947.2020.9266419},
 	month = {September},
-	pages = {1-6},
 	pdf = {joint_measurement_angle_angular_velocity_interferometer_lfm.pdf},
 	slides = {radarconf_2020_presentation.pdf},
 	title = {Joint Measurement of Target Angle and Angular Velocity Using Interferometric Radar with FM Waveforms},
@@ -286,6 +345,7 @@
 
 @inproceedings{merlo2020dualaxis,
 	abbr = {IEEE AP-S/URSI},
+	bibtex_show={true},
 	abstract = {A complex correlation interferometric radar utilizing two orthogonal baselines to simultaneously
       measure the angular velocity of a moving target in two dimensions is presented. Measurements were
       conducted using a 40.5 GHz continuous-wave radar achieving an accuracy of 0.55 to 2.55%},
@@ -294,7 +354,9 @@
 	date-added = {2020-11-09 12:45:34 -0500},
 	date-modified = {2020-11-10 21:32:49 -0500},
 	ieee = {https://doi.org/10.1109/IEEECONF35879.2020.9330294},
+	doi = {10.1109/IEEECONF35879.2020.9330294},
 	month = {July},
+	pages={1661-1662},
 	pdf = {dual-axis_interferometry_for_2d_motion_estimation.pdf},
 	slides = {aps_2020_interferometry_4.pdf},
 	title = {A Dual-Axis Interferometric Radar for Instantaneous 2D Angular Velocity Measurement},
@@ -303,6 +365,7 @@
 
 @inproceedings{merlo2020fmcw,
 	abbr = {IEEE AP-S SDC},
+	bibtex_show={true},
 	abstract = {The design of a portable frequency-modulated continuous-wave (FMCW) radar system for detecting and localizing drones is discussed in this report. The system utilized the 5.8 GHz industrial, scientific and medical band and occupied a 100 MHz bandwidth. The system is able to localize drones at a range of 10 m or more. The theory behind FMCW radar localization is explained, and an algorithm for detecting the drone response is presented. The design considerations of a radar board and transmit and receive patch antenna arrays are discussed. We include experimental measurements of tracking a drone.},
 	author = {Jason M. {Merlo} and Stavros {Vakalis} and Cory {Hilton} and Jacob {Randall}},
 	award = {SDC Second Place},
@@ -319,6 +382,7 @@
 
 @inproceedings{doroschewitz2019microwave,
 	abbr = {IEEE AP-S/URSI},
+	bibtex_show={true}, 
 	abstract = {A 16-antenna-element microwave tomographic imaging system using a fast switching matrix is presented.
     This system uses frequency domain sampling and time-reversal image processing to image its environment.
     The use of time-reversal provides a more efficient computational method than traditional inverse techniques,
@@ -331,6 +395,7 @@
 	booktitle = {IEEE International Symposium on Antennas and Propagation and USNC-URSI Radio Science Meeting},
 	date-modified = {2021-05-14 09:07:33 -0400},
 	ieee = {https://doi.org/10.1109/APUSNCURSINRSM.2019.8889157},
+	doi = {10.1109/APUSNCURSINRSM.2019.8889157},
 	month = {July},
 	pages = {583-584},
 	title = {A Microwave Tomography System Using Time-Reversal Imaging},
