--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,6 +17,19 @@
   ieee={https://doi.org/10.1109/TAP.2023.3323141},
   doi={10.1109/TAP.2023.3323141}}
 
+@INPROCEEDINGS{10289274,
+	abbr={EuRAD},
+	bibtex_show={true},
+  author={Bhattacharyya, Ahona and Merlo, Jason M. and Nanzer, Jeffrey A.},
+  booktitle={2023 20th European Radar Conference (EuRAD)}, 
+	abstract={In this paper we propose the use of a combined two-tone LFM ranging waveform for node localization of distributed antenna arrays (DAAs). Coherent operation in a distributed array requires accurate synchronization of the phase, frequency, and time on each node, and the precise localization of the transmitting nodes, which is challenging at microwave frequencies, especially for nodes that are spatially dynamic. The spatially sparse two-tone waveform and the linear frequency modulation (LFM) ranging waveform have been individually studied for two-way time synchronization and ranging extensively. In this paper we experimentally demonstrate the use of the combined two-tone LFM waveform to estimate the distances between the nodes and accurately calculate their locations. The accuracy of the combined waveform was measured experimentally and demonstrated localization accuracy of less than 1 cm. Based on these measurements, the system can theoretically support beamforming frequencies of up to 4.4 GHz.},
+  title={A Dual-Carrier Linear-Frequency Modulated Waveform for High-Accuracy Localization in Distributed Antenna Arrays}, 
+  year={2023},
+	month={September},
+  pages={331-334},
+	ieee = {https://doi.org/10.23919/EuRAD58043.2023.10289274},
+  doi={10.23919/EuRAD58043.2023.10289274}}
+
 
 @inproceedings{merlo2023grcon,
 	abbr = {GRCon},
