Updated GrCon video url

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -40,12 +40,13 @@
 	booktitle = {GNU Radio Conference (GRCon)},
 	date-added = {2023-09-11 13:17:37 -0400},
 	date-modified = {2023-09-11 13:40:03 -0400},
+	selected = {true},
 	link = {https://events.gnuradio.org/event/21/contributions/413/},
 	month = {August},
 	slides = {2023_grcon_merlo.pdf},
 	title = {High Accuracy Wireless Timing Synchronization Using Software Defined Radios},
 	url = {https://events.gnuradio.org/event/21/contributions/413/},
-	video = {https://youtu.be/hiLcz9FoxKw?t=18722},
+	video = {https://youtu.be/yj9Lt2cyOOM},
 	website = {https://events.gnuradio.org/event/21/contributions/413/},
 	year = {2023},
 	bdsk-url-1 = {https://events.gnuradio.org/event/21/contributions/413/}}
