--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,23 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@ARTICLE{10477599,
+  abbr={IEEE MWTL},
+	award={Top IMS 2024 Papers},
+	abstract={In this work, we experimentally demonstrate, for the first time, a fully wireless coherent distributed antenna array (CDA) performing distributed transmit and receive beamforming for a down-range sensing application at microwave frequencies without the need for external frequency and time references such as global navigation satellite systems (GNSSs). We build on previous methods utilizing a continuous-wave (CW) two- tone frequency transfer system and a pulsed two-tone time synchronization system to align the distributed platforms in both time and frequency. Coherent transmit and receive beamforming was performed utilizing 100 MHz linear frequency modulation (LFM) waveforms for sensing. Two experiments were performed: one imaging a static scene and one imaging a moving pedestrian holding a corner reflector. The beamforming gain is quantified in the static measurements yielding a median beamforming gain of 2.12 dB and a maximum gain of 2.86 dB (96.5% coherent beamforming gain).},
+  author={Merlo, Jason M. and Wagner, Samuel and Lancaster, John and Nanzer, Jeffrey A.},
+  journal={IEEE Microwave and Wireless Technology Letters}, 
+	bibtex_show={true},
+  title={Fully Wireless Coherent Distributed Phased Array System for Networked Radar Applications}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={1-4},
+	pdf={mwtl_distributed_radar.pdf},
+  keywords={Synchronization;Array signal processing;Time-frequency analysis;Transmitting antennas;Receiving antennas;Gain;Wireless communication;Automotive radar;distributed antenna arrays;distributed beamforming;networked radar;remote sensing;wireless sensor networks;wireless synchronization},
+  doi={10.1109/LMWT.2024.3375085},
+	ieee={10.1109/LMWT.2024.3375085}}
+
 @ARTICLE{randall2023tap,
   abbr={IEEE TAP},
   bibtex_show={true},
