Fixed broken link and code formatting

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,7 @@
 	pdf={mwtl_distributed_radar.pdf},
   keywords={Synchronization;Array signal processing;Time-frequency analysis;Transmitting antennas;Receiving antennas;Gain;Wireless communication;Automotive radar;distributed antenna arrays;distributed beamforming;networked radar;remote sensing;wireless sensor networks;wireless synchronization},
   doi={10.1109/LMWT.2024.3375085},
-	ieee={10.1109/LMWT.2024.3375085}}
+	ieee={https://doi.org/10.1109/LMWT.2024.3375085}}
 
 @ARTICLE{randall2023tap,
   abbr={IEEE TAP},
