--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,10 +15,8 @@
 	bibtex_show={true},
   title={Fully Wireless Coherent Distributed Phased Array System for Networked Radar Applications}, 
   year={2024},
-  volume={},
-  number={},
   pages={1-4},
-	pdf={mwtl_distributed_radar.pdf},
+	pdf={2024_mwtl_distributed_radar.pdf},
   keywords={Synchronization;Array signal processing;Time-frequency analysis;Transmitting antennas;Receiving antennas;Gain;Wireless communication;Automotive radar;distributed antenna arrays;distributed beamforming;networked radar;remote sensing;wireless sensor networks;wireless synchronization},
   doi={10.1109/LMWT.2024.3375085},
 	ieee={https://doi.org/10.1109/LMWT.2024.3375085}}
