Added SPC award

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
 @ARTICLE{10477599,
   abbr={IEEE MWTL},
 	award={Top Papers of IMS 2024},
+	award2={SPC Finalist},
 	selected=True,
 	abstract={In this work, we experimentally demonstrate, for the first time, a fully wireless coherent distributed antenna array (CDA) performing distributed transmit and receive beamforming for a down-range sensing application at microwave frequencies without the need for external frequency and time references such as global navigation satellite systems (GNSSs). We build on previous methods utilizing a continuous-wave (CW) two- tone frequency transfer system and a pulsed two-tone time synchronization system to align the distributed platforms in both time and frequency. Coherent transmit and receive beamforming was performed utilizing 100 MHz linear frequency modulation (LFM) waveforms for sensing. Two experiments were performed: one imaging a static scene and one imaging a moving pedestrian holding a corner reflector. The beamforming gain is quantified in the static measurements yielding a median beamforming gain of 2.12 dB and a maximum gain of 2.86 dB (96.5% coherent beamforming gain).},
   author={Merlo, Jason M. and Wagner, Samuel and Lancaster, John and Nanzer, Jeffrey A.},
@@ -201,9 +202,10 @@
 	number={6},
 	pages={775-778},
 	title = {Multiobjective Distributed Array Beamforming in the Near Field Using Wireless Syntonization},
+	month= {June},
 	year = {2023}}
 
-@article{merlo2022wireless,
+@article{merlo2023wireless,
 	abbr = {IEEE T-MTT},
 	bibtex_show={true},
 	abstract = {Distributed antenna arrays have been proposed for many applications ranging from space-based observatories to automated vehicles. Achieving good performance in distributed antenna systems requires stringent synchronization at the wavelength and information level to ensure that the transmitted signals arrive coherently at the target, or that scattered and received signals can be appropriately processed via distributed algorithms. In this paper we address the challenge of high precision time synchronization to align the operations of elements in a distributed antenna array and to overcome time-varying bias between platforms due to oscillator drift. We use a spectrally sparse two-tone waveform, which obtains approximately optimal time estimation accuracy, in a two-way time transfer process. We also describe a technique for determining the true time delay using the ambiguous two-tone matched filter output, and we compare the time synchronization precision of the two-tone waveform with the more common linear frequency modulation (LFM) waveform. We experimentally demonstrate wireless time synchronization using a single pulse 40MHz two-tone waveform over a 90cm 5.8GHz wireless link in a laboratory setting, obtaining a timing precision of 2.26ps.},
@@ -213,7 +215,7 @@
 	doi = {10.1109/TMTT.2022.3227878},
 	ieee = {https://doi.org/10.1109/TMTT.2022.3227878},
 	journal = {IEEE Transactions on Microwave Theory and Techniques},
-	month = {December},
+	month = {April},
 	pdf = {wireless_time_frequency_synchronization_2022.pdf},
 	selected = {true},
 	google_scholar_id = {W7OEmFMy1HYC},
@@ -221,7 +223,7 @@
 	number={4},
 	pages={1720-1731},
 	title = {Wireless Picosecond Time Synchronization for Distributed Antenna Arrays},
-	year = {2022}}
+	year = {2023}}
 
 @article{mukerjee2022microwave,
 	abbr = {IEEE JMW},
