Updated IMS paper entry

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 @ARTICLE{10477599,
-  abbr={IEEE MWTL},
+  abbr={IEEE IMS/MWTL},
 	award={Top Papers of IMS 2024},
 	award2={SPC Finalist},
 	selected=True,
