Updates from IMS and AP-S

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,22 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{merlo2024aps,
+	abbr = {IEEE AP-S/URSI},
+	bibtex_show={true},
+	abstract = {In this work we present a fully wireless coherent distributed interferometric radar for sensing the radial and angular velocities of dynamic targets. We build upon prior work on wireless coordination in both time and frequency by utilizing a high accuracy two-tone frequency transfer method for frequency syntonization and global navigation satellite system-based pulseper-second timing alignment. The interferometric radar is based on software-defined radios and uses a continuous-wave 3.3 GHz signal to measure the Doppler and interferometric frequency shifts of signals scattered from moving targets. The two nodes in the array are separated by 91 cm (10λ). Coordination between the nodes was implemented wirelessly at 4.3 GHz, and received radar signals were transferred for joint processing at one node at 5.8 GHz. We demonstrate the performance of the distributed interferometric radar by measuring the instantaneous radial and angular velocities of a pedestrian carrying a corner reflector tangentially past the array.},
+	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
+	award = {SPC Finalist},
+	booktitle = {IEEE International Symposium on Antennas and Propagation and USNC-URSI Radio Science Meeting},
+	month = {July},
+ 	pages={1-2},
+	pdf = {aps24_angular_velocity_v1.0.pdf},
+	poster = {2024_aps_spc_poster.pdf},
+	selected = {true},
+	slides = {2024_aps_ursi_slides.pdf},
+	title = {Distributed Interferometric Radar for Radial and Angular Velocity Measurement},
+	year = {2024}}
+
 @ARTICLE{merlo2024ims-mwtl,
   abbr={IEEE IMS/MWTL},
 	award={Top Papers of IMS 2024},
@@ -14,10 +30,14 @@
 	abstract={In this work, we experimentally demonstrate, for the first time, a fully wireless coherent distributed antenna array (CDA) performing distributed transmit and receive beamforming for a down-range sensing application at microwave frequencies without the need for external frequency and time references such as global navigation satellite systems (GNSSs). We build on previous methods utilizing a continuous-wave (CW) two- tone frequency transfer system and a pulsed two-tone time synchronization system to align the distributed platforms in both time and frequency. Coherent transmit and receive beamforming was performed utilizing 100 MHz linear frequency modulation (LFM) waveforms for sensing. Two experiments were performed: one imaging a static scene and one imaging a moving pedestrian holding a corner reflector. The beamforming gain is quantified in the static measurements yielding a median beamforming gain of 2.12 dB and a maximum gain of 2.86 dB (96.5% coherent beamforming gain).},
   author={Merlo, Jason M. and Wagner, Samuel and Lancaster, John and Nanzer, Jeffrey A.},
   journal={IEEE Microwave and Wireless Technology Letters}, 
+    year={2024},
+  volume={34},
+  number={6},
+  pages={837-840},
 	bibtex_show={true},
   title={Fully Wireless Coherent Distributed Phased Array System for Networked Radar Applications}, 
+  month={June},
   year={2024},
-  pages={1-4},
   slides={2024_ims_slides.pdf},
 	pdf={2024_mwtl_distributed_radar_flat.pdf},
   keywords={Synchronization;Array signal processing;Time-frequency analysis;Transmitting antennas;Receiving antennas;Gain;Wireless communication;Automotive radar;distributed antenna arrays;distributed beamforming;networked radar;remote sensing;wireless sensor networks;wireless synchronization},
@@ -31,7 +51,11 @@
   author={Randall, Jacob R. and Merlo, Jason M. and Arisheh, Amer Abu and Nanzer, Jeffrey A.},
   journal={IEEE Transactions on Antennas and Propagation}, 
   title={Array Phase Center Dynamics Using Spatial Amplitude Modulation for High Efficiency Secure Wireless Communication}, 
-  year={2023},
+  year={2024},
+  month={january},
+  volume={72},
+  number={1},
+  pages={487-496},
   ieee={https://doi.org/10.1109/TAP.2023.3323141},
   doi={10.1109/TAP.2023.3323141}}
 
