--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,7 +23,7 @@
 	year = {2024}}
 
 @ARTICLE{merlo2024ims-mwtl,
-  abbr={IEEE IMS/MWTL},
+  abbr={IEEE MWTL (IMS)},
 	award={Top Papers of IMS 2024},
 	award2={SPC Finalist},
 	selected = {true},
