Added GRCon Talk

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,19 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{merlo2024grcon,
+	abbr = {GRCon},
+	address = {Knoxville, Tennessee, USA},
+	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
+	award = {Lightning Talk},
+	booktitle = {GNU Radio Conference (GRCon)},
+	month = {September},
+	slides = {2024_grcon_slides.pdf},
+	title = {Distributed Networked Radio Deployments Using The DELTA Framework},
+	video = {https://youtu.be/PVlWK-39cCw?t=21950},
+	code = {https://gitlab.msu.edu/delta/da-framework},
+	year = {2024},}
+
 @inproceedings{merlo2024aps,
 	abbr = {IEEE AP-S/URSI},
 	bibtex_show={true},
