Added IEEE link for PAST paper to bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,7 +23,8 @@
 	selected = {true},
 	slides = {2024_past_slides.pdf},
 	title = {Fully Wireless Collaborative Beamforming Using A Three-Element Coherent Distributed Phased Array},
-	year = {2024}}
+	year = {2024},
+	ieee = {https://doi.org/10.1109/ARRAY58370.2024.10880359}}
 
 @article{shandi2024tcom,
     abbr = {TCOM},
