--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
 
  
 @inproceedings{merlo2024past,
-	abbr = {PAST},
+	abbr = {IEEE PAST},
 	abstract = {In this work we experimentally demonstrate a wirelessly coordinated three-element coherent distributed phased array performing beamforming and beam steering to a target in the far-field over 17 m at a carrier frequency of 1.05 GHz. We build on our previous work utilizing a high accuracy two-way time transfer (TWTT) technique for inter-node time synchronization and ranging and an analog continuous two-tone frequency transfer technique to perform syntonization by moving to a fully wireless architecture, without the need for external reference signals such as global navigation satellite system (GNSS)-derived pulse-per-second (PPS), including a distributed computing system architecture, and the use of fully wireless communication links between nodes. Finally, we perform a far-field beamforming experiment with beam steering to a receiver 17 m away at a carrier frequency of 1.05 GHz and demonstrate a beamforming coherent gain of 0.95 (9.32 dB) with a beamforming inter-element timing accuracy of below 60 ps.},
 	address = {Boston, Massachusetts, USA},
 	author = {Jason M. {Merlo} and Naim {Shandi} and Matthew {Dula} and Ahona {Bhattacharyya} and Jeffrey A. {Nanzer}},
@@ -167,7 +167,6 @@
 	date-modified = {2023-09-11 13:40:03 -0400},
 	link = {https://events.gnuradio.org/event/21/contributions/413/},
 	month = {August},
-	selected = {true},
 	slides = {2023_grcon_merlo.pdf},
 	title = {High Accuracy Wireless Timing Synchronization Using Software Defined Radios},
 	url = {https://events.gnuradio.org/event/21/contributions/413/},
