--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,6 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-
  
 @inproceedings{merlo2024past,
 	abbr = {IEEE PAST},
@@ -26,21 +25,18 @@
 	year = {2024},
 	ieee = {https://doi.org/10.1109/ARRAY58370.2024.10880359}}
 
-@article{shandi2024tcom,
-    abbr = {TCOM},
-    abstract = {We demonstrate a wireless, decentralized time-alignment method for distributed antenna arrays and distributed wireless networks that achieves picosecond-level synchronization. Distributed antenna arrays consist of spatially separated antennas that coordinate their functionality at the wavelength level to achieve coherent operations such as distributed beamforming. Accurate time alignment (synchronization) of the local clocks on each node in the array is necessary to support accurate time-delay beamforming of modulated signals. In this work we combine a consensus averaging algorithm and a high-accuracy wireless two-way time transfer method to achieve decentralized time alignment, correcting for the time-varying bias of the clocks in a method that has no central node. Internode time transfer is based on a spectrally-sparse, two-tone signal achieving near-optimal time delay accuracy. We experimentally demonstrate the approach in a wireless four-node software-defined radio system, with various network connectivity graphs. We show that within 20 iterations all the nodes achieve convergence within a bias of less than 12 ps and a standard deviation of less than 3 ps. The performance is evaluated versus the bandwidth of the two-tone waveform, which impacts the synchronization error, and versus the signal-to-noise ratio.},
-	author = {Shandi, Naim and Merlo, Jason M. and Nanzer, Jeffrey A.},
-	date-added = {2024-10-26 08:34:08 -0400},
-	date-modified = {2024-10-26 08:34:29 -0400},
-	doi = {10.1109/TCOMM.2024.3480993},
-	journal = {IEEE Transactions on Communications},
-	keywords = {Synchronization;Clocks;Accuracy;Estimation;Phased arrays;Topology;Signal to noise ratio;Delay effects;Array signal processing;Time-frequency analysis;Consensus averaging;distributed antenna arrays;distributed beamforming;distributed phased arrays;synchronization;wireless networks},
-	month = {October},
-	pages = {1-1},
-	bibtex_show = {true},
-	title = {Decentralized Picosecond Synchronization for Distributed Wireless Systems},
-	year = {2024},
-	ieee = {https://doi.org/10.1109/TCOMM.2024.3480993}}
+@ARTICLE{shandi2024synchronization,
+  abbr = {IEEE TCOMM},
+  abstract = {We demonstrate a wireless, decentralized time-alignment method for distributed antenna arrays and distributed wireless networks that achieves picosecond-level synchronization. Distributed antenna arrays consist of spatially separated antennas that coordinate their functionality at the wavelength level to achieve coherent operations such as distributed beamforming. Accurate time alignment (synchronization) of the local clocks on each node in the array is necessary to support accurate time-delay beamforming of modulated signals. In this work we combine a consensus averaging algorithm and a high-accuracy wireless two-way time transfer method to achieve decentralized time alignment, correcting for the time-varying bias of the clocks in a method that has no central node. Internode time transfer is based on a spectrally-sparse, two-tone signal achieving near-optimal time delay accuracy. We experimentally demonstrate the approach in a wireless four-node software-defined radio system, with various network connectivity graphs. We show that within 20 iterations all the nodes achieve convergence within a bias of less than 12 ps and a standard deviation of less than 3 ps. The performance is evaluated versus the bandwidth of the two-tone waveform, which impacts the synchronization error, and versus the signal-to-noise ratio.},
+  author={Shandi, Naim and Merlo, Jason M. and Nanzer, Jeffrey A.},
+  journal={IEEE Transactions on Communications}, 
+  title={Decentralized Picosecond Synchronization for Distributed Wireless Systems}, 
+  month={October},
+  year={2024},
+  bibtex_show=True,
+  keywords={Synchronization;Clocks;Accuracy;Estimation;Phased arrays;Topology;Signal to noise ratio;Delay effects;Array signal processing;Time-frequency analysis;Consensus averaging;distributed antenna arrays;distributed beamforming;distributed phased arrays;synchronization;wireless networks},
+  doi={10.1109/TCOMM.2024.3480993},
+  ieee = {https://doi.org/10.1109/TCOMM.2024.3480993}}
 
 @inproceedings{merlo2024grcon,
 	abbr = {GRCon},
