--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,7 +48,7 @@
 	month = {September},
 	slides = {2024_grcon_slides.pdf},
 	title = {Distributed Networked Radio Deployments Using The DELTA Framework},
-	video = {https://youtu.be/PVlWK-39cCw?t=21950},
+	video = {https://youtu.be/IBDP_YuNspM?si=FEhLU8bpbZuYk1ik},
 	year = {2024}}
 
 @inproceedings{merlo2024aps,
