--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,7 +26,7 @@
 	ieee = {https://doi.org/10.1109/ARRAY58370.2024.10880359}}
 
 @ARTICLE{shandi2024synchronization,
-  abbr = {IEEE TCOMM},
+  abbr = {IEEE TCOM},
   abstract = {We demonstrate a wireless, decentralized time-alignment method for distributed antenna arrays and distributed wireless networks that achieves picosecond-level synchronization. Distributed antenna arrays consist of spatially separated antennas that coordinate their functionality at the wavelength level to achieve coherent operations such as distributed beamforming. Accurate time alignment (synchronization) of the local clocks on each node in the array is necessary to support accurate time-delay beamforming of modulated signals. In this work we combine a consensus averaging algorithm and a high-accuracy wireless two-way time transfer method to achieve decentralized time alignment, correcting for the time-varying bias of the clocks in a method that has no central node. Internode time transfer is based on a spectrally-sparse, two-tone signal achieving near-optimal time delay accuracy. We experimentally demonstrate the approach in a wireless four-node software-defined radio system, with various network connectivity graphs. We show that within 20 iterations all the nodes achieve convergence within a bias of less than 12 ps and a standard deviation of less than 3 ps. The performance is evaluated versus the bandwidth of the two-tone waveform, which impacts the synchronization error, and versus the signal-to-noise ratio.},
   author={Shandi, Naim and Merlo, Jason M. and Nanzer, Jeffrey A.},
   journal={IEEE Transactions on Communications}, 
