--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -65,6 +65,8 @@
 	poster = {2024_aps_spc_poster.pdf},
 	selected = {true},
 	slides = {2024_aps_ursi_slides.pdf},
+	ieee = {https://doi.org/10.1109/AP-S/INC-USNC-URSI52054.2024.10686149},
+	doi = {10.1109/AP-S/INC-USNC-URSI52054.2024.10686149},
 	title = {Distributed Interferometric Radar for Radial and Angular Velocity Measurement},
 	year = {2024}}
 
